--- a/style.css
+++ b/style.css
@@ -39,11 +39,17 @@ body, html{
 
 /* LANDING */
 #landingWrap{
-  position:fixed; top:0; left:0; width:100%; height:100dvh;
-  display:flex; align-items:center; justify-content:center;
-  background:linear-gradient(180deg,#020103,#100920);
-  flex-direction:column; z-index:9999; overflow:hidden;
-  transition:opacity 500ms ease;
+  position:fixed;
+   top:0;
+    left:0;
+     width:100%;
+      height:100dvh;
+
+  display:flex;
+ align-items:center; justify-content:center;
+ background:linear-gradient(180deg,#020103,#100920);
+ flex-direction:column; z-index:9999; overflow:hidden;
+ transition: opacity 500ms ease;
 }
 #launchBtn{
   padding:16px 32px;
