--- a/formulario/styles/index.css
+++ b/formulario/styles/index.css
@@ -4,5 +4,6 @@
 @import url(../styles/3-form.css);
 @import url(../styles/4-preview.css);
 @import url(../styles/5-end.css);
+@import url(../styles/6-livro.css);
 @import url(../styles/background.css);
 
